// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLink> should add class active when is active 1`] = `
<div>
  <a
    aria-current="page"
    class="navItem"
    href="/explore"
  >
    <svg />
    Content
  </a>
</div>
`;

exports[`<NavLink> should render icon and text 1`] = `
<div>
  <a
    class="navItem"
    href="/explore"
  >
    <svg />
    Content
  </a>
</div>
`;
